syntax = "proto3";
package proto;

service Presentation {
    rpc Create (CreateRequest) returns (CreateResponse) {
    }

    rpc FindForCinema (FindForCinemaRequest) returns (FindForCinemaResponse) {
    }

    rpc FindForMovie (FindForMovieRequest) returns (FindForMovieResponse) {
    }

    rpc ReadAll (ReadAllRequest) returns (ReadAllResponse) {
    }

    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
}

message PresentationData {
    int64 cinemaId = 1;
    int64 movieId = 2;
}

message CreateRequest {
    PresentationData data = 1;
}

message CreateResponse {
}

message FindForCinemaRequest {
    int64 cinemaId = 1;
}

message FindForCinemaResponse {
    repeated PresentationData dates = 1;
}

message FindForMovieRequest {
    int64 movieId = 1;
}

message FindForMovieResponse {
    repeated PresentationData dates = 1;
}

message ReadAllRequest {
}

message ReadAllResponse {
    repeated PresentationData dates = 1;
}

message DeleteRequest {
    PresentationData data = 1;
}

message DeleteResponse {
}
